--- a/register.css
+++ b/register.css
@@ -78,6 +78,43 @@ a{
     color: blue;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    background-image: url('background.jpg'); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: Arial, sans-serif;
+}
+nav {
+    width: 100%;
+    height: 100px;
+    background-color: burlywood;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+    nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    nav li {
+        display: inline;
+    }
+    nav a {
+        text-decoration: none;
+        color: white;
+        font-size: 18px; 
+        font-weight: bold; 
+    }
+
+        nav a:hover {
+            color: chocolate; 
+        }
+
 
   
 
