--- a/register.css
+++ b/register.css
@@ -81,7 +81,7 @@ a{
 body {
     margin: 0;
     padding: 0;
-    background-image: url('background.jpg'); 
+    background-image: url('pic.jpg'); 
     background-size: cover;
     background-repeat: no-repeat;
     font-family: Arial, sans-serif;
