--- a/contacts.css
+++ b/contacts.css
@@ -3,7 +3,7 @@ body {
     margin: 20px;
     margin: 0;
     padding: 0;
-    background-image: url('img/image3.jpg');
+    background-image: url('img/Contactsimage.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     font-family: Arial, sans-serif;
