--- a/categories.css
+++ b/categories.css
@@ -1,56 +1,56 @@
-*
-{margin:0;
- padding:0;
- box-sizing:border-box;
- list-style:none;
- text-decoration:none;
- font-family: sans-serif;
+body{
+background-color:antiquewhite;
 
 }
-
-.wrapper
-{display:flex;
- position:relative;
-
-
+/* Updated style for centering and sizing the form */
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-.wrapper .sideNav
-{
-    position:fixed;
-    width:220px;
-    height:150%;
-    background: #00ff90;
-    padding:40px 0;
-
+.sideNav {
+    width: 300px; /* Adjust the width of the sideNav */
+    background-color: burlywood;
+    padding: 20px; /* Add padding for better aesthetics */
+    border-radius: 10px; /* Add rounded corners for a nicer look */
 }
 
-    .wrapper .sideNav h2
-    {
-    color: brown;
-    text-transform:uppercase;
-    text-align:center;
-    margin-bottom:30px;
+h2 {
+    color: #333;
+    text-align: center; /* Center the heading text */
+}
 
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+/* Updated style for the buttons */
+a {
+    display: block;
+    width: 100%;
+    padding: 12px;
+    text-align: center;
+    text-decoration: none;
+    color: #333;
+    background-color: #ddd;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+    a:hover {
+        background-color: #bbb;
     }
 
 
-    .wrapper .sideNav ul li {
-        padding: 15px;
-        border-bottom: 4px;
-        border-top: 4px solid rgb(225, 225, 225, 0.05 )
-    }
 
-    .wrapper .sideNav ul li a
-    {display:block;
-         color: blue;
+    
 
 
-    }
-
-    .wrapper .sideNav ul li:hover a
-    {color:aquamarine;
+    
 
 
 
-    }
+   
