--- a/register.css
+++ b/register.css
@@ -86,34 +86,6 @@ body {
     background-repeat: no-repeat;
     font-family: Arial, sans-serif;
 }
-nav {
-    width: 100%;
-    height: 100px;
-    background-color: burlywood;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-    nav ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
-
-    nav li {
-        display: inline;
-    }
-    nav a {
-        text-decoration: none;
-        color: white;
-        font-size: 18px; 
-        font-weight: bold; 
-    }
-
-        nav a:hover {
-            color: chocolate; 
-        }
 
 body {
     font-family: Arial, sans-serif;
@@ -161,6 +133,24 @@ h3 {
 }
 
 
+
+/* Styling the navigation menu items */
+li {
+    display: inline; /* Display list items horizontally */
+    margin-right: 20px; /* Add spacing between list items */
+}
+
+/* Styling the anchor tags (links) */
+a {
+    text-decoration: none; /* Remove underlines from links */
+    color: white; /* Set link color */
+    font-weight: bold; /* Make the text bold */
+}
+
+    /* Change link color on hover */
+    a:hover {
+        color: #ff6600; /* Change to a different color on hover */
+    }
   
 
 
