--- a/teamMembers.css
+++ b/teamMembers.css
@@ -68,3 +68,32 @@ div {
         div a:hover {
             text-decoration: underline;
         }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    height: 1px;
+    border: 1px solid #ddd;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+tbody tr:hover {
+    background-color: #f2f2f2;
+}
+
+tfoot {
+    height: 5px;
+}
